--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,2 @@
 eclipse.preferences.version=1
-encoding//src/ais/Affinity.java=UTF-8
-encoding//src/ais/File.java=UTF-8
-encoding//src/ais/Train.java=UTF-8
+encoding//src/ais/Main.java=UTF-8
